@@ -98,6 +98,11 @@ Just press the ENTER key when prompted for a password.
         this value to be whatever we choose, as long as it's a valid date
         format as recognized by Java.</p>
 
+        <p>It is possible to configure the port for the JMX HttpAdaptor to which CruiseControl will connect.
+        By default it is set to 8000. When using the binary release of CruiseControl, it is overridden by
+        the environment variable named <code>cruisecontrol.jmxport</code>. If desired, edit the web.xml to set
+        this property, noting that the environment variable, if present, takes precedence.</p>
+
         <h2><a name="Building">Building</a></h2>
 
         <p>CruiseControl uses <a class="external" href="http://jakarta.apache.org/ant">Ant</a> to
